--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,101 +1,103 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'com.google.gms.google-services'
-// Apply the Crashlytics Gradle plugin
-apply plugin: 'com.google.firebase.crashlytics'
+plugins {
+    id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics'
+}
 
 android {
-    compileSdkVersion 30
+    namespace = "com.umang.MindzSpark"
+    compileSdk = 35
 
     defaultConfig {
-        applicationId "com.umang.MindzSpark"
-        minSdkVersion 22
-        targetSdkVersion 30
-        versionCode 8
-        versionName "1.0.4"
+        applicationId = "com.umang.MindzSpark"
+        minSdk = 23
+        targetSdk = 35
+        versionCode = 1
+        versionName = "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         release {
-            minifyEnabled true
-            multiDexEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled = true
+            multiDexEnabled = true
+            proguardFiles(
+                    getDefaultProguardFile("proguard-android-optimize.txt"),
+                    "proguard-rules.pro"
+            )
         }
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_11
+        targetCompatibility = JavaVersion.VERSION_11
+    }
+
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+    buildFeatures {
+        viewBinding = true
     }
 }
 
 repositories {
+    google()
+    mavenCentral()
     maven { url 'https://jitpack.io' }
 }
 
-
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
-    //noinspection GradleDependency
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.firebase:firebase-auth:20.0.1'
-    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
-    testImplementation 'junit:junit:4.13.1'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.24"
 
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    // AndroidX Core Libraries
+    implementation 'androidx.core:core-ktx:1.15.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
 
-    // Google Ads
-    implementation 'com.google.android.gms:play-services-ads:19.6.0'
+    // Material Design
+    implementation 'com.google.android.material:material:1.12.0'
 
-
-
-
-    implementation platform('com.google.firebase:firebase-bom:26.0.0')
-
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:33.8.0') // Update with the latest BOM
     implementation 'com.google.firebase:firebase-analytics-ktx'
-
+    implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-database-ktx'
-
     implementation 'com.google.firebase:firebase-storage-ktx'
-
     implementation 'com.google.firebase:firebase-messaging-ktx'
-
-    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
-    implementation 'androidx.work:work-runtime:2.4.0'
-
-    implementation 'com.airbnb.android:lottie:3.4.2'
-
-
-    // Declare the dependencies for the Crashlytics and Analytics libraries
-    // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-analytics-ktx'
 
-    // Add the dependencies for any other desired Firebase products
-    // https://firebase.google.com/docs/android/setup#available-libraries
+    // Google Play Services
+    implementation 'com.google.android.gms:play-services-auth:21.3.0'
+    implementation 'com.google.android.gms:play-services-ads:23.6.0'
 
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
 
-    //material design
-    implementation 'com.google.android.material:material:1.2.1'
+    // Testing
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
+    // Volley
+    implementation 'com.mcxiaoke.volley:library-aar:1.0.0'
+
+    // WorkManager
+    implementation 'androidx.work:work-runtime-ktx:2.10.0'
+
+    // Circle ImageView
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.google.firebase:firebase-core:18.0.0'
-    implementation 'com.google.firebase:firebase-iid:21.0.0'
-    implementation 'com.google.android.gms:play-services-auth:20.0.1'
+    // Lottie Animations
+    implementation 'com.airbnb.android:lottie:6.0.0'
 
-    // Work Manager
-    implementation 'android.arch.work:work-runtime:1.0.1'
-    implementation "androidx.cardview:cardview:1.0.0"
-
+    // By me things to solve some errors
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.recyclerview:recyclerview:1.4.0'
 
 }
